# app/Http/Resources/OrderDetailResource.php
@@ -21,12 +21,13 @@ class OrderDetailResource extends JsonResource
             'payment' => PaymentResource::make($this->invoice->payment),
             'shipping_address' => $this->shipping->address,
             'shipping' => ShippingResource::make($this->shipping),
-            'notes' => $this->notes,
+            'note' => $this->note,
             'cancel_reason' => $this->cancel_reason,
             'status' => $this->status,
             'total_quantity' => $this->total_quantity,
             'total_weight' => $this->shipping->weight,
             'total_price' => $this->total_price,
+            'discount' => $this->discount,
             'shipping_cost' => $this->shipping_cost,
             'total_amount' => $this->invoice->amount,
             'payment_due_date' => $this->invoice->due_date,
