# app/Models/Order.php
@@ -51,8 +51,9 @@ class Order extends Model
     protected $fillable = [
         'user_id',
         'total_price',
+        'discount',
         'shipping_cost',
-        'notes',
+        'note',
         'cancel_reason',
         'status',
         'confirmed_at',
